@@ -1,7 +1,10 @@
 var strata = require("./../index");
 
 module.exports = function (app, validate, realm) {
-    validate = validate || function (user, pass, cb) { cb(null, false); }
+    if (typeof validate != "function") {
+        throw new strata.Error("Missing validation function for basic auth");
+    }
+
     realm = realm || "Authorization Required";
 
     return function authBasic(env, callback) {
@@ -21,7 +24,7 @@ module.exports = function (app, validate, realm) {
             scheme = parts[0];
 
         if (scheme.toLowerCase() != "basic") {
-            callback(400, {}, "Bad Request");
+            badRequest(callback);
             return;
         }
 
@@ -43,7 +46,20 @@ module.exports = function (app, validate, realm) {
 }
 
 function unauthorized(realm, callback) {
+    var content = "Unauthorized";
+
     callback(401, {
+        "Content-Type": "text/plain",
+        "Content-Length": Buffer.byteLength(content).toString(),
         "WWW-Authenticate": 'Basic realm="' + realm + '"'
-    }, "Unauthorized");
+    }, content);
+}
+
+function badRequest(callback) {
+    var content = "Bad Request";
+
+    callback(400, {
+        "Content-Type": "text/plain",
+        "Content-Length": Buffer.byteLength(content).toString()
+    }, content);
 }
