@@ -1,3 +1,7 @@
+= HEAD
+
+  * Set Content-Type/Length in error responses from basic auth middleware.
+
 = 0.5.10 / 2011-09-26
 
   * Use Content-Length: 0 for HEAD requests.
